# openshmem-mlir

./: .gitignore  CMakeLists.txt  README.md  debug_ctx_put_nbi.mlir
README/: ARCHITECTURE_DIAGRAM.md  FRONTEND_STATUS.md
cir/: CMakeLists.txt  README.md
cir/include/: CMakeLists.txt
cir/include/OpenSHMEMCIR/: OpenSHMEMCIR.h  Passes.h  Passes.td
cir/lib/: CMakeLists.txt  Passes.cpp
cir/lib/Rewriters/: CMakeLists.txt  RewriteAtomics.cpp  RewriteCollectives.cpp  RewriteContexts.cpp  RewriteMemory.cpp  RewriteOpenSHMEMCalls.cpp  RewritePt2ptSync.cpp  RewriteRMA.cpp  RewriteSetup.cpp  RewriteSync.cpp  RewriteTeams.cpp  Utils.cpp  Utils.h
cir/test/: CMakeLists.txt
cir/test/OpenSHMEM/: atomic-convert.mlir  cir-openshmem-calls.mlir  complete-cir-test.mlir  complete-pipeline.mlir  comprehensive-cir-test.mlir  contexts-convert.mlir  convert-to-dialect.mlir  end-to-end-lowering.mlir  final-test.mlir  malloc-cir-test.mlir  minimal-cir-test.mlir  proper-cir-test.mlir  pt2pt-sync-convert.mlir  rewrite-basic.mlir  rma-cir-convert.mlir  simple-cir-test.mlir  simple-end-to-end.mlir  teams-convert.mlir
examples/: 2.hello_shmem.openshmem.mlir  3.hello_shmem.partial-llvm.mlir  4.hello_shmem.llvm-with-casts.mlir  5.hello_shmem.llvm.mlir  6.hello_shmem.ll  7.hello_shmem.s  9.hello_shmem  build_pipeline.sh  hello_shmem.cir  hello_shmem.ll  hello_shmem.llvm.mlir  hello_shmem.openshmem.mlir
include/mlir/: CMakeLists.txt
include/mlir/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/mlir/Conversion/OpenSHMEMToLLVM/: CMakeLists.txt  OpenSHMEMConversionUtils.h  OpenSHMEMToLLVM.h  Passes.td
include/mlir/Dialect/: CMakeLists.txt
include/mlir/Dialect/OpenSHMEM/IR/: CMakeLists.txt  OpenSHMEM.h  OpenSHMEM.td  OpenSHMEMAtomics.td  OpenSHMEMAttrs.td  OpenSHMEMBase.td  OpenSHMEMBridge.td  OpenSHMEMCollectives.td  OpenSHMEMContexts.td  OpenSHMEMMemory.td  OpenSHMEMOps.td  OpenSHMEMPt2ptSync.td  OpenSHMEMRMAOps.td  OpenSHMEMRMAOps.td.bk  OpenSHMEMSetup.td  OpenSHMEMSync.td  OpenSHMEMTeams.td  OpenSHMEMTypes.td
include/mlir/Dialect/OpenSHMEM/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Conversion/OpenSHMEMToLLVM/: AtomicOpsToLLVM.cpp  AtomicOpsToLLVM.h  BridgeOpsToLLVM.cpp  BridgeOpsToLLVM.h  CMakeLists.txt  CollectiveOpsToLLVM.cpp  CollectiveOpsToLLVM.h  ContextOpsToLLVM.cpp  ContextOpsToLLVM.h  MemoryOpsToLLVM.cpp  MemoryOpsToLLVM.h  OpenSHMEMConversionUtils.cpp  OpenSHMEMConversionUtils.h  OpenSHMEMToLLVM.cpp  Pt2ptSyncOpsToLLVM.cpp  Pt2ptSyncOpsToLLVM.h  RMAOpsToLLVM.cpp  RMAOpsToLLVM.h  SetupOpsToLLVM.cpp  SetupOpsToLLVM.h  SyncOpsToLLVM.cpp  SyncOpsToLLVM.h  TeamOpsToLLVM.cpp  TeamOpsToLLVM.h
lib/Dialect/OpenSHMEM/IR/: CMakeLists.txt  OpenSHMEM.cpp  OpenSHMEMOps.cpp
lib/Dialect/OpenSHMEM/Transforms/: CMakeLists.txt  Passes.cpp
notes/: clangir_bug.md  journal.md  notes.md  shmem4py.aux  shmem4py.fdb_latexmk  shmem4py.fls  shmem4py.out  shmem4py.tex
notes/issues/: issue-02.md
python/: CMakeLists.txt  requirements.txt
python/examples/: halo_step_simple.py
python/mlir/: __init__.py
python/mlir/dialects/: __init__.py  openshmem.py
python/shmem4py_mlir/: __init__.py  builder.py  cli.py  compile_e2e.py  dump_stages.py  frontend.py  jit.py  mlir_gen.py  passes.py
python/tests/: __init__.py  test_e2e_compilation.py  test_e2e_hello_shmem.py  test_frontend_basics.py
scripts/: build-llvm-project.sh  build-openshmem-mlir.sh  build_clangir.sh  build_llvm_project.sh  build_openshmem_mlir.sh  build_openshmem_mlir_clangir.sh  build_openshmem_mlir_incubator.sh  build_openshmem_mlir_upstream.sh  build_sos.sh  build_toolchain.sh  clean.sh  end-to-end-demo.sh  format.sh  setup_conda.sh  setup_shmem4py_env.sh  test-lowering.sh  test_cir_to_openshmem_mlir.sh  test_conversion.sh  test_end_to_end.sh  test_lowering.sh  test_openshmem_mlir_to_llvm_mlir.sh  test_python_to_mlir.sh  verify_frontend_selection.sh
scripts/lib/: toolchain.sh
test/: CMakeLists.txt  hello_shmem.c  hello_shmem.cir
test/Conversion/: CMakeLists.txt
test/Conversion/CIRToOpenSHMEM/: CMakeLists.txt  collectives-convert.mlir  ctx-rma-convert.mlir
test/Conversion/OpenSHMEMToLLVM/: CMakeLists.txt  atomics-lower.mlir  collectives-lower.mlir  contexts-lower.mlir  memory-lower.mlir  openshmemtollvm.mlir  rma-lower.mlir  setup-lower.mlir  sync-lower.mlir  teams-lower.mlir
test/Dialect/: CMakeLists.txt  openshmemops.mlir  simple.mlir
test/EndToEnd/2DHeatStencil/: 2d_stencil.c
test/EndToEnd/HelloWorld/: hello_shmem.c
test/EndToEnd/RMA/: shmem_put.c
tmp/: TODO.md  rma_simplification_analysis.md
tools/: CMakeLists.txt
tools/openshmem-opt/: CMakeLists.txt  openshmem-opt.cpp
tools/shmem-cir-opt/: CMakeLists.txt  shmem-cir-opt.cpp
tools/shmem-mlir-opt/: CMakeLists.txt  shmem-mlir-opt.cpp
